# testing-demos_cpp

./: .codeclimate.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: calculator.cpp
src/include/calculator/: calculator.h
test/: calculatortest.cpp  testrunner.cpp
